# dukascopy

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  bi5.cpp  dukascopy.cpp  dukascopy.h  loki.hpp  lzma.cpp
test/: CMakeLists.txt  test_bytesTo.cpp  test_read.cpp  test_read_bi5.cpp  test_read_bin.cpp
test/data/GBPJPY/2012/11/02/: 22h_ticks.bi5  23h_ticks.bi5
test/data/GBPJPY/2012/11/03/: 01h_ticks.bi5  03h_ticks.bi5  06h_ticks.bi5  07h_ticks.bi5  09h_ticks.bi5  10h_ticks.bi5  11h_ticks.bi5  13h_ticks.bi5  14h_ticks.bi5  15h_ticks.bi5  21h_ticks.bi5
test/data/GBPJPY/2012/11/04/: 00h_ticks.bi5  01h_ticks.bi5  02h_ticks.bi5  03h_ticks.bi5  04h_ticks.bi5  05h_ticks.bi5  06h_ticks.bi5  07h_ticks.bi5  08h_ticks.bi5  09h_ticks.bi5  10h_ticks.bi5  11h_ticks.bi5  12h_ticks.bi5  13h_ticks.bi5  14h_ticks.bi5  15h_ticks.bi5  16h_ticks.bi5  17h_ticks.bi5  18h_ticks.bi5  19h_ticks.bi5  20h_ticks.bi5  21h_ticks.bi5  22h_ticks.bi5  23h_ticks.bi5
test/data/GBPJPY/2012/11/05/: 00h_ticks.bi5  01h_ticks.bi5  02h_ticks.bi5  03h_ticks.bi5  04h_ticks.bi5  05h_ticks.bi5  06h_ticks.bi5  07h_ticks.bi5  08h_ticks.bi5  09h_ticks.bi5  10h_ticks.bi5  11h_ticks.bi5  12h_ticks.bi5  13h_ticks.bi5  14h_ticks.bi5  15h_ticks.bi5  16h_ticks.bi5  17h_ticks.bi5  18h_ticks.bi5  19h_ticks.bi5  20h_ticks.bi5  21h_ticks.bi5  22h_ticks.bi5  23h_ticks.bi5
test/data/GBPJPY/2012/11/06/: 00h_ticks.bi5  01h_ticks.bi5  02h_ticks.bi5  03h_ticks.bi5  04h_ticks.bi5  05h_ticks.bi5  06h_ticks.bi5  07h_ticks.bi5  08h_ticks.bi5  09h_ticks.bi5  10h_ticks.bi5  11h_ticks.bi5  12h_ticks.bi5  13h_ticks.bi5  14h_ticks.bi5  15h_ticks.bi5  16h_ticks.bi5  17h_ticks.bi5  18h_ticks.bi5  19h_ticks.bi5  20h_ticks.bi5  21h_ticks.bi5  22h_ticks.bi5  23h_ticks.bi5
test/data/GBPJPY/2012/11/07/: 00h_ticks.bi5  01h_ticks.bi5  02h_ticks.bi5  03h_ticks.bi5  04h_ticks.bi5  05h_ticks.bi5  06h_ticks.bi5  07h_ticks.bi5  08h_ticks.bi5  09h_ticks.bi5  10h_ticks.bi5  11h_ticks.bi5  12h_ticks.bi5  13h_ticks.bi5  14h_ticks.bi5  15h_ticks.bi5  16h_ticks.bi5  17h_ticks.bi5  18h_ticks.bi5  19h_ticks.bi5  20h_ticks.bi5  21h_ticks.bi5
test/data/GBPJPY/2012/11/09/: 22h_ticks.bi5  23h_ticks.bi5
test/data/GBPJPY/2012/11/10/: 00h_ticks.bi5  01h_ticks.bi5  02h_ticks.bi5  03h_ticks.bi5  04h_ticks.bi5  05h_ticks.bi5  06h_ticks.bi5  07h_ticks.bi5  08h_ticks.bi5  09h_ticks.bi5  10h_ticks.bi5  11h_ticks.bi5  12h_ticks.bi5  13h_ticks.bi5  14h_ticks.bi5  15h_ticks.bi5  16h_ticks.bi5  17h_ticks.bi5  18h_ticks.bi5  19h_ticks.bi5  20h_ticks.bi5  21h_ticks.bi5  22h_ticks.bi5  23h_ticks.bi5
test/data/GBPJPY/2012/11/11/: 00h_ticks.bi5  01h_ticks.bi5  02h_ticks.bi5  03h_ticks.bi5  04h_ticks.bi5  05h_ticks.bi5  06h_ticks.bi5  07h_ticks.bi5  08h_ticks.bi5  09h_ticks.bi5  10h_ticks.bi5  11h_ticks.bi5  12h_ticks.bi5  13h_ticks.bi5  14h_ticks.bi5  15h_ticks.bi5  16h_ticks.bi5  17h_ticks.bi5  18h_ticks.bi5  19h_ticks.bi5  20h_ticks.bi5  21h_ticks.bi5  22h_ticks.bi5  23h_ticks.bi5
test/data/GBPJPY/2012/11/12/: 00h_ticks.bi5  01h_ticks.bi5  02h_ticks.bi5  03h_ticks.bi5  04h_ticks.bi5  05h_ticks.bi5  06h_ticks.bi5  07h_ticks.bi5  08h_ticks.bi5  09h_ticks.bi5  10h_ticks.bi5  11h_ticks.bi5  12h_ticks.bi5  13h_ticks.bi5  14h_ticks.bi5  15h_ticks.bi5  16h_ticks.bi5  17h_ticks.bi5  18h_ticks.bi5  19h_ticks.bi5  20h_ticks.bi5  21h_ticks.bi5  22h_ticks.bi5  23h_ticks.bi5
test/data/GBPJPY/2012/11/13/: 00h_ticks.bi5  01h_ticks.bi5  02h_ticks.bi5  03h_ticks.bi5  04h_ticks.bi5  05h_ticks.bi5  06h_ticks.bi5  07h_ticks.bi5  08h_ticks.bi5  09h_ticks.bi5  10h_ticks.bi5  11h_ticks.bi5  12h_ticks.bi5  13h_ticks.bi5  14h_ticks.bi5  15h_ticks.bi5  16h_ticks.bi5  17h_ticks.bi5  18h_ticks.bi5  19h_ticks.bi5  20h_ticks.bi5  21h_ticks.bi5  22h_ticks.bi5  23h_ticks.bi5
test/data/GBPJPY/2012/11/14/: 00h_ticks.bi5  01h_ticks.bi5  02h_ticks.bi5  03h_ticks.bi5  04h_ticks.bi5  05h_ticks.bi5  06h_ticks.bi5  07h_ticks.bi5  08h_ticks.bi5  09h_ticks.bi5  10h_ticks.bi5  11h_ticks.bi5  12h_ticks.bi5  13h_ticks.bi5  14h_ticks.bi5  15h_ticks.bi5  16h_ticks.bi5  17h_ticks.bi5  18h_ticks.bi5  19h_ticks.bi5  20h_ticks.bi5  21h_ticks.bi5
test/data/GBPJPY/2012/11/16/: 22h_ticks.bi5  23h_ticks.bi5
test/data/GBPJPY/2012/11/17/: 00h_ticks.bi5  01h_ticks.bi5  02h_ticks.bi5  03h_ticks.bi5  04h_ticks.bi5  05h_ticks.bi5  06h_ticks.bi5  07h_ticks.bi5  08h_ticks.bi5  09h_ticks.bi5  10h_ticks.bi5  11h_ticks.bi5  12h_ticks.bi5  13h_ticks.bi5  14h_ticks.bi5  15h_ticks.bi5  16h_ticks.bi5  17h_ticks.bi5  18h_ticks.bi5  19h_ticks.bi5  20h_ticks.bi5  21h_ticks.bi5  22h_ticks.bi5  23h_ticks.bi5
test/data/GBPJPY/2012/11/18/: 00h_ticks.bi5  01h_ticks.bi5  02h_ticks.bi5  03h_ticks.bi5  04h_ticks.bi5  05h_ticks.bi5  06h_ticks.bi5  07h_ticks.bi5  08h_ticks.bi5  09h_ticks.bi5  10h_ticks.bi5  11h_ticks.bi5  12h_ticks.bi5  13h_ticks.bi5  14h_ticks.bi5  15h_ticks.bi5  16h_ticks.bi5  17h_ticks.bi5  18h_ticks.bi5  19h_ticks.bi5  20h_ticks.bi5  21h_ticks.bi5  22h_ticks.bi5  23h_ticks.bi5
test/data/GBPJPY/2012/11/19/: 00h_ticks.bi5  01h_ticks.bi5  02h_ticks.bi5  03h_ticks.bi5  04h_ticks.bi5  05h_ticks.bi5  06h_ticks.bi5  07h_ticks.bi5  08h_ticks.bi5  09h_ticks.bi5  10h_ticks.bi5  11h_ticks.bi5  12h_ticks.bi5  13h_ticks.bi5  14h_ticks.bi5  15h_ticks.bi5  16h_ticks.bi5  17h_ticks.bi5  18h_ticks.bi5  19h_ticks.bi5  20h_ticks.bi5  21h_ticks.bi5  22h_ticks.bi5  23h_ticks.bi5
test/data/GBPJPY/2012/11/20/: 00h_ticks.bi5  01h_ticks.bi5  02h_ticks.bi5  03h_ticks.bi5  04h_ticks.bi5  05h_ticks.bi5  06h_ticks.bi5  07h_ticks.bi5  08h_ticks.bi5  09h_ticks.bi5  10h_ticks.bi5  11h_ticks.bi5  12h_ticks.bi5  13h_ticks.bi5  14h_ticks.bi5  15h_ticks.bi5  16h_ticks.bi5  17h_ticks.bi5  18h_ticks.bi5  19h_ticks.bi5  20h_ticks.bi5  21h_ticks.bi5  22h_ticks.bi5  23h_ticks.bi5
test/data/GBPJPY/2012/11/21/: 00h_ticks.bi5  01h_ticks.bi5  02h_ticks.bi5  03h_ticks.bi5  04h_ticks.bi5  05h_ticks.bi5  06h_ticks.bi5  07h_ticks.bi5  08h_ticks.bi5  09h_ticks.bi5  10h_ticks.bi5  11h_ticks.bi5  12h_ticks.bi5  13h_ticks.bi5  14h_ticks.bi5  15h_ticks.bi5  16h_ticks.bi5  17h_ticks.bi5  18h_ticks.bi5  19h_ticks.bi5  20h_ticks.bi5  (+1 more)
(+159 files in other folders)
