
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(libduksacopy)
SET (NINETY47 ninety47)
SET (LIBDUKASCOPY_MAJOR 0)
SET (LIBDUKASCOPY_MINOR 1)
SET (LIBDUKASCOPY_MICRO 1)

SET (LIBDUKASCOPY_DIST_NAME
     "duksacopy-${LIBDUKASCOPY_MAJOR}.${LIBDUKASCOPY_MINOR}.${LIBDUKASCOPY_MICRO}")

IF (NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Release")
ENDIF (NOT CMAKE_BUILD_TYPE)

IF (${CMAKE_BUILD_TYPE} STREQUAL "Release")
  MESSAGE("** for a debug build: cmake -DCMAKE_BUILD_TYPE=Debug ..")
ENDIF (${CMAKE_BUILD_TYPE} STREQUAL "Release")

SET(CMAKE_C_FLAGS "-Wall")
IF (WIN32)
  SET(linkFlags "/PDB:NONE /INCREMENTAL:NO /OPT:NOREF /OPT:NOICF")
  SET(CMAKE_EXE_LINKER_FLAGS    "${linkFlags}"
      CACHE STRING "LIBDUKASCOPY linker flags" FORCE)
  SET(CMAKE_EXE_LINKER_FLAGS_DEBUG ""
      CACHE STRING "LIBDUKASCOPY debug linker flags" FORCE)
  SET(CMAKE_EXE_LINKER_FLAGS_RELEASE
      CACHE STRING "LIBDUKASCOPY release linker flags" FORCE)
  SET(CMAKE_SHARED_LINKER_FLAGS "${linkFlags}"
      CACHE STRING "LIBDUKASCOPY shared linker flags" FORCE)
  SET(CMAKE_MODULE_LINKER_FLAGS "${linkFlags}"
      CACHE STRING "LIBDUKASCOPY module linker flags" FORCE)

  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /wd4668 /wd4820 /wd4996 /wd4255 /wd4130 /wd4100 /wd4711")
  SET(CMAKE_C_FLAGS_DEBUG "/D DEBUG /Od /Z7")
  SET(CMAKE_C_FLAGS_RELEASE "/D NDEBUG /O2")
ELSE (WIN32)
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -ansi")
  SET(CMAKE_C_FLAGS_DEBUG "-DDEBUG -g")
  SET(CMAKE_C_FLAGS_RELEASE "-DNDEBUG -O2")
ENDIF (WIN32)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
